# korean-persona-mcp

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/: data.py  db.py  schema.py  server.py
